# launchlab-hackthon

./: README.md  package-lock.json
Front/voice2vital/: package-lock.json  package.json
Front/voice2vital/src/: App.css  App.tsx
Front/voice2vital/src/pages/: ClinicalNotes.tsx  Dashboard.tsx  DoctorRegistration.tsx  Login.tsx  PatientRegistration.tsx  SessionRecorder.tsx  chatbot.tsx
backend/: .gitignore  requirement.txt  test_gemini.py
backend/stt/: .gitignore  Makefile  auth.py  client.py  main.py  processing.py  pyproject.toml  refine.py  server.py  test_refine.py  test_transcibe.py  transcribe.py  utils.py
