[project]
name = "stt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "fastmcp>=2.11.3",
    "google-genai>=1.30.0",
    "openai>=1.99.9",
    "pydantic>=2.11.7",
    "rev-ai>=2.21.0",
]
